crates/parser/src/tests/snapshots/kcl_parser__tests__error_recovery__paren_recovery_5.snap
---
source: crates/parser/src/tests/error_recovery.rs
expression: "$crate :: tests :: parsing_expr_string(r#\"(a +\"#)"
---
Node {
    node: Paren(
        ParenExpr {
            expr: Node {
                node: Binary(
                    BinaryExpr {
                        left: Node {
                            node: Identifier(
                                Identifier {
                                    names: [
                                        Node {
                                            node: "a",
                                            filename: "",
                                            line: 1,
                                            column: 1,
                                            end_line: 1,
                                            end_column: 2,
                                        },
                                    ],
                                    pkgpath: "",
                                    ctx: Load,
                                },
                            ),
                            filename: "",
                            line: 1,
                            column: 1,
                            end_line: 1,
                            end_column: 2,
                        },
                        op: Add,
                        right: Node {
                            node: Missing(
                                MissingExpr,
                            ),
                            filename: "",
                            line: 1,
                            column: 4,
                            end_line: 1,
                            end_column: 4,
                        },
                    },
                ),
                filename: "",
                line: 1,
                column: 1,
                end_line: 1,
                end_column: 4,
            },
        },
    ),
    filename: "",
    line: 1,
    column: 0,
    end_line: 1,
    end_column: 4,
}
