crates/parser/src/tests/snapshots/kcl_parser__tests__error_recovery__rule_stmt_recovery_7.snap
---
source: crates/parser/src/tests/error_recovery.rs
expression: "$crate :: tests :: parsing_module_string(r#\"\nrule A:\n    @\n\"#)"
---
Module {
    filename: "",
    doc: None,
    body: [
        Node {
            node: Rule(
                RuleStmt {
                    doc: None,
                    name: Node {
                        node: "A",
                        filename: "",
                        line: 2,
                        column: 5,
                        end_line: 2,
                        end_column: 6,
                    },
                    parent_rules: [],
                    decorators: [],
                    checks: [
                        Node {
                            node: CheckExpr {
                                test: Node {
                                    node: Missing(
                                        MissingExpr,
                                    ),
                                    filename: "",
                                    line: 3,
                                    column: 4,
                                    end_line: 3,
                                    end_column: 5,
                                },
                                if_cond: None,
                                msg: None,
                            },
                            filename: "",
                            line: 3,
                            column: 4,
                            end_line: 3,
                            end_column: 4,
                        },
                        Node {
                            node: CheckExpr {
                                test: Node {
                                    node: Missing(
                                        MissingExpr,
                                    ),
                                    filename: "",
                                    line: 3,
                                    column: 5,
                                    end_line: 3,
                                    end_column: 6,
                                },
                                if_cond: None,
                                msg: None,
                            },
                            filename: "",
                            line: 3,
                            column: 5,
                            end_line: 3,
                            end_column: 5,
                        },
                    ],
                    args: None,
                    for_host_name: None,
                },
            ),
            filename: "",
            line: 2,
            column: 0,
            end_line: 3,
            end_column: 6,
        },
    ],
    comments: [],
}
